src/main/fabric8/deploymentconfig.yml
---
apiVersion: "v1"
kind: "DeploymentConfig"
spec:
  replicas: 1
  template:
    spec:
      containers:
      - env:
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: "/health"
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 180
          periodSeconds: 10
          successThreashold: 1
          timeoutSeconds: 1
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: "/health"
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreashold: 1
          timeoutSeconds: 1
  triggers:
  - type: "ConfigChange"
  - imageChangeParams:
      automatic: true
      containerNames:
      - "java-exec"
      from:
        kind: "ImageStreamTag"
        name: "${project.artifactId}:latest"
    type: "ImageChange"
